--- a/Gemma/Views/AspNetUsers/Index.cshtml
+++ b/Gemma/Views/AspNetUsers/Index.cshtml
@@ -9,61 +9,67 @@
 @*<p>
         @Html.ActionLink("新增", "Create")
     </p>*@
+
+
 @using (Html.BeginForm())
 {
 <div class="form-inline">
     <div class="form-group">
-        <label class="btn btn-info ml-3">會員搜尋</label>
-        @Html.TextBox("id", null, new { @class = "form-control ml-3" })
+        <h5 class="ml-2 font-weight-bold">會員搜尋</h5>
+        @Html.TextBox("id", null, new { placeholder="請輸入身分證字號" , @class = "form-control ml-3 h-50" })
     </div>
     <div class="form-group" style="display:none">
         @Html.TextBox("search", "true")
     </div>
     <div class="form-group">
-        <input type="submit" value="查詢" class="btn btn-success ml-3" />
+        <input type="submit" value="查詢" class="border-0 btn-transition btn btn-outline-success ml-3" />
     </div>
 </div>
 
 }
 <br />
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().PhoneNumber)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.ActionLink("編輯", "Edit", new { id = item.Id }, new { @class = "btn btn-success" }) 
-                @Html.ActionLink("詳細資料", "Details", new { id = item.Id }, new { @class = "btn btn-info" }) 
-                @Html.ActionLink("刪除", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
-            </td>
+<table class="table table-hover table-sm">
+    <thead>
+        <tr class="thead-dark">
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().UserName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().PhoneNumber)
+            </th>
+            <th></th>
         </tr>
-    }
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td  class="text-center">
+                    @Html.ActionLink("編輯", "Edit", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                    @Html.ActionLink("詳細資料", "Details", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                    @Html.ActionLink("刪除", "Delete", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
 @Html.PagedListPager(Model, page => Url.Action("Index", new RouteValueDictionary { { "productName", (string)ViewBag.searchMemberId }, { "page", page } }))
