--- a/Gemma/Views/Order/Index.cshtml
+++ b/Gemma/Views/Order/Index.cshtml
@@ -4,20 +4,20 @@
     ViewBag.Title = "Index";
 }
 <p>
-    @Html.ActionLink("去年各月份營業額", "Revenu", null, new { @class = "btn btn-primary ml-3" })
+    @Html.ActionLink("去年各月份營業額", "Revenu", null, new { @class = "btn btn-primary ml-2" })
 </p>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="form-inline">
         <div class="form-group">
-            <label class="btn btn-info ml-3">客戶</label>
-            @Html.TextBox("customerName", null, new { @class = "form-control ml-3" })
+            <label class="font-weight-bold ml-2 mr-1">客戶</label>
+            @Html.TextBox("customerName", null, new { @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group">
-            <label class="btn btn-info ml-3">產品</label>
-            @Html.TextBox("productNames", null, new { @class = "form-control ml-3" })
+            <label class="font-weight-bold ml-2 mr-1">產品</label>
+            @Html.TextBox("productNames", null, new { @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group" style="display:none">
@@ -26,57 +26,59 @@
 
         <div class="form-group">
             <div>
-                <input type="submit" value="查詢" class="btn btn-success ml-3" />
+                <input type="submit" value="查詢" class="border-0 btn-transition btn btn-outline-success ml-3" />
             </div>
         </div>
     </div>
 
 }
 <br>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().OrderID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().CustomerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().ProductNames)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().TotalPrice)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstOrDefault().OrderDate)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductNames)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.ActionLink("訂單明細", "Details", new { orderID = item.OrderID }, new { @class = "btn btn-info" })
-            </td>
+<table class="table table-hover table-sm">
+    <thead>
+        <tr class="thead-dark">
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().OrderID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().CustomerName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().ProductNames)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().TotalPrice)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().OrderDate)
+            </th>
+            <th></th>
         </tr>
-    }
-
+        </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CustomerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductNames)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.ActionLink("檢視", "Details", new { orderID = item.OrderID }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
 @Html.PagedListPager(Model, page => Url.Action("Index", new RouteValueDictionary { { "customerName", (string)ViewBag.searchCustomerName }, { "productNames", (string)ViewBag.searchProductNames }, { "size", (string)ViewBag.searchSize }, { "page", page } }))
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
