--- a/Gemma/Views/Order/Index.cshtml
+++ b/Gemma/Views/Order/Index.cshtml
@@ -12,12 +12,12 @@
     <div class="form-inline">
         <div class="form-group">
             <label class="font-weight-bold ml-2 mr-1">客戶</label>
-            @Html.TextBox("customerName", null, new { @class = "form-control ml-1 h-50" })
+            @Html.TextBox("customerName", null, new {placeholder="請輸入客戶名稱" , @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group">
             <label class="font-weight-bold ml-2 mr-1">產品</label>
-            @Html.TextBox("productNames", null, new { @class = "form-control ml-1 h-50" })
+            @Html.TextBox("productNames", null, new {placeholder="請輸入產品名稱" , @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group" style="display:none">
