--- a/Gemma/Views/Products/Index.cshtml
+++ b/Gemma/Views/Products/Index.cshtml
@@ -14,12 +14,12 @@
     <div class="form-inline">
         <div class="form-group">
             <label class="font-weight-bold ml-2 mr-1">產品</label>
-            @Html.TextBox("productName",null, new { @class = "form-control ml-1 h-50" })
+            @Html.TextBox("productName",null, new {placeholder="請輸入產品名稱" , @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group">
             <label class="font-weight-bold ml-2 mr-1">類別</label>
-            @Html.TextBox("categoryName",null, new { @class = "form-control ml-1 h-50" })
+            @Html.TextBox("categoryName",null, new {placeholder="請輸入類別名稱" , @class = "form-control ml-1 h-50" })
         </div>
 
         <div class="form-group" style="display:none">
