--- a/Gemma/Views/Shared/_BackStagePartialTop.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialTop.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNet.Identity
 <div class="app-header header-shadow">
     <div class="app-header__logo">
+        <img style="height:75%;cursor:pointer;" onclick="location.href='@Url.Action("Index","BackStageHome")'" src="~/Assets/images/Icons/logo.png" />
     </div>
     <div class="app-header__mobile-menu">
         <div>
