--- a/Gemma/Views/AspNetUsers/Index.cshtml
+++ b/Gemma/Views/AspNetUsers/Index.cshtml
@@ -31,9 +31,9 @@
 <table class="table table-hover table-sm">
     <thead>
         <tr class="thead-dark">
-            <th>
-                @Html.DisplayNameFor(model => model.FirstOrDefault().Id)
-            </th>
+            @*<th>
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Id)
+        </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.FirstOrDefault().UserName)
             </th>
@@ -43,6 +43,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.FirstOrDefault().PhoneNumber)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Address)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -50,25 +53,28 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
-                </td>
-                <td  class="text-center">
-                    @Html.ActionLink("編輯", "Edit", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
-                    @Html.ActionLink("詳細資料", "Details", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
-                    @Html.ActionLink("刪除", "Delete", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
-                </td>
-            </tr>
+        <tr>
+            @*<td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td class="text-center">
+                @Html.ActionLink("編輯", "Edit", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                @Html.ActionLink("詳細資料", "Details", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+                @Html.ActionLink("刪除", "Delete", new { id = item.Id }, new { @class = "mb-2 mr-2 border-0 btn-transition btn btn-outline-focus" })
+            </td>
+        </tr>
         }
     </tbody>
 </table>
