--- a/Gemma/Views/AspNetUsers/Index.cshtml
+++ b/Gemma/Views/AspNetUsers/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="form-inline">
     <div class="form-group">
         <h5 class="ml-2 font-weight-bold">會員搜尋</h5>
-        @Html.TextBox("id", null, new { placeholder="請輸入身分證字號" , @class = "form-control ml-3 h-50" })
+        @Html.TextBox("userName", null, new { placeholder="請輸入使用者名稱" , @class = "form-control ml-3 h-50" })
     </div>
     <div class="form-group" style="display:none">
         @Html.TextBox("search", "true")
@@ -78,4 +78,4 @@
         }
     </tbody>
 </table>
-@Html.PagedListPager(Model, page => Url.Action("Index", new RouteValueDictionary { { "productName", (string)ViewBag.searchMemberId }, { "page", page } }))
+@Html.PagedListPager(Model, page => Url.Action("Index", new RouteValueDictionary { { "productName", (string)ViewBag.searchUserName }, { "page", page } }))
