fix findproductbyid border white

--- a/Gemma/Views/Details/FindProductById.cshtml
+++ b/Gemma/Views/Details/FindProductById.cshtml
@@ -149,7 +149,7 @@
                 if ($('.pImages img').hasClass("selected") != true) $('#color-warning').text("Please select color.").css("color", "red");
 
                 $('.size-filters button').css("border-color", "#c5c5c5").removeClass("selected");
-                $(this).css("border-color", "black").addClass("selected");
+                $(this).css("border-color", "white").addClass("selected");
             })
             var jsonData1 = {}
             app = new Vue({
