--- a/Gemma/Assets/css/Shop.css
+++ b/Gemma/Assets/css/Shop.css
@@ -1,16 +1,18 @@
-﻿body {
+﻿/*body {
     color: rgb(25, 25, 25);
     font-family: "Noto Sans JP", sans-serif;
     font-size: 16px;
     letter-spacing: 0.2em;
     line-height: 2;
     background-color: #F5F5F5;
-}
+}*/
 
 hr {
     border: 0;
     height: 1px;
     background: #000000;
+    width: 90%;
+    margin-left: 0;
 }
 
 /*section {
@@ -24,7 +26,7 @@ hr {
 }*/
 
 
-.fixed {
+/*.fixed {
     height: 70px !important;
     animation-delay: 100ms;
 }
@@ -32,16 +34,16 @@ hr {
 .photofixed {
     height: 150px !important;
     width: 200px !important;
-}
+}*/
 
 /*img {
     height: 100px;
     width: 150px;
 }*/
 
-.navtop {
+/*.navtop {
     height: 100px;
-}
+}*/
 
 .allcontexter {
     width: 1180px;
@@ -64,11 +66,11 @@ hr {
     text-align: center;
 }
 
-.navbar {
+/*.navbar {
     width: 100%;
     position: fixed;
     display: table-cell;
-}
+}*/
 
 .top {
     height: 100px;
@@ -92,6 +94,6 @@ hr {
         width: 130px;
     }*/
 
-* {
+/** {
     transition: 100ms;
-}
+}*/
