--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
          attribution=setup_tool
          page_id="368171660627475"
          theme_color="#e68585"
-         logged_in_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!"
-         logged_out_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!">
+         logged_in_greeting="您好，歡迎光臨Gemme Shop，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!"
+         logged_out_greeting="您好，歡迎光臨Gemme Shop，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!">
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
